# rust_link_demo

./: Cargo.toml  README.md
dev/: .gitignore  Makefile  main.c
dev/include/: api.h
dev/plugin/: Makefile  outer.cxx
src/: build.rs  lib.rs
src/link_c/: inner.cxx
src/link_c/include/: inner.hxx  outer.hxx
