[package]
name = "link_test"
version = "0.1.0"
authors = ["simonkorl <machuan0228@sina.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
 
[dependencies]
log = { version = "0.4", features = ["std"] }
libc = "0.2"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
dunce="0.1.1"